--- a/ShowDemo/ShowDemo/Base.lproj/Main.storyboard
+++ b/ShowDemo/ShowDemo/Base.lproj/Main.storyboard
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -14,6 +13,10 @@
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nyB-2r-QNm"/>
+                        <viewControllerLayoutGuide type="bottom" id="AX1-FI-fqI"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -62,11 +65,10 @@
                             <constraint firstItem="lZ7-r8-NzY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="GTj-PF-KC4"/>
                             <constraint firstItem="lZ7-r8-NzY" firstAttribute="top" secondItem="EYU-va-ddd" secondAttribute="bottom" constant="57.5" id="PBg-WL-uMF"/>
                             <constraint firstItem="EYU-va-ddd" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Zcy-6r-g0G"/>
-                            <constraint firstItem="EYU-va-ddd" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="116" id="as8-Ms-CpL"/>
+                            <constraint firstItem="EYU-va-ddd" firstAttribute="top" secondItem="nyB-2r-QNm" secondAttribute="bottom" constant="116" id="as8-Ms-CpL"/>
                             <constraint firstItem="93j-3Y-WLP" firstAttribute="top" secondItem="lZ7-r8-NzY" secondAttribute="bottom" constant="70" id="hzQ-2t-d4N"/>
                             <constraint firstItem="m27-7R-moR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="udc-1C-0wV"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
